TestSuite/Syntax/Errors/Macro3.tjp
project test "Test" "1.0" 2003-01-01 - 2003-02-01

macro foo [
  task foo "Foo" { ${foo} }
]

task t1 "Task1" {
  ${foo}
}

